--- a/PermissionManager/src/main/webapp/WEB-INF/web.xml
+++ b/PermissionManager/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,6 @@
   	<listener-class>com.yy.pm.listener.AutoCreateTable</listener-class>
   </listener>
   <welcome-file-list>
-  	<welcome-file>/WEB-INF/views/login.jsp</welcome-file>
+  	<welcome-file>/login.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
