--- a/PermissionManager/pom.xml
+++ b/PermissionManager/pom.xml
@@ -7,6 +7,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
   <version>1.0-SNAPSHOT</version>
   <name>PermissionManager Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -66,6 +71,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		<groupId>javax.servlet.jsp.jstl</groupId>
 		<artifactId>javax.servlet.jsp.jstl-api</artifactId>
 		<version>1.2.1</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+	<dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.51</version>
 	</dependency>
 
   </dependencies>
